# terminal

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  update.json  vite.config.ts
plano/: documentacao-completa.md
scripts/: deploy-update.py  generate_icons.py  install-context-menu.bat  install-context.ps1  setup-context-menu.bat
src/: App.tsx  CommandPalette.tsx  ExtensionsPanel.tsx  FileExplorer.tsx  HistorySearch.tsx  SystemMonitor.tsx  UpdateNotification.tsx  UpdateSection.tsx  WelcomeScreen.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
