[package]
name = "ezzo-terminal"
version = "1.5.0"
description = "EZZO Terminal — Terminal moderno e translúcido para Windows"
authors = ["EZZO"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["sync", "rt"] }
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.33"
arboard = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
