[package]
name = "ezzo-terminal"
version = "1.7.0"
description = "EZZO Terminal — Terminal moderno, elegante e translúcido para Windows com suporte a CMD, PowerShell e WSL"
authors = ["EZZO Digital Inc."]
edition = "2021"
license = "MIT"
homepage = "https://ezzo.digital"
repository = "https://github.com/ezzo/terminal"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["sync", "rt"] }
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.33"
arboard = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
